tests for endpoints added
